Updated Bigger Sponge Absorption Radius to Minecraft version 26.2.0.